Issue #26136: Upgrade the generator_stop warning to DeprecationWarning

Patch by Anish Shah.